# py-industrial-robots

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/industrial_robots/: fanuc.pyi
src/: conversions.rs  fanuc.rs  lib.rs  mesh.rs  utility.rs
