[package]
name = "industrial-robots-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "industrial_robots_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["abi3", "abi3-py37", "extension-module", "generate-import-lib"] }
industrial-robots = { git = "https://github.com/mattj23/industrial-robots.git", branch = "main" }
numpy = "0.18.0"
